[package]
name = "gevson"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive", "env"] }
blake3 = { version = "1.5", features = [ "mmap" ] }
sha3 = "0.10"
rand = { version = "0.8", features = [ "std_rng" ] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0"}
libsecp256k1 = "0.7"
hex = "0.4"

