[package]
name = "gevson"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive", "env"] }
blake3 = { version = "1.5", features = [ "mmap" ] }
sha3 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0"}
hex = "0.4"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = "0.1"
anyhow = "1.0.71"
simple-websockets = "0.1.6"
reqwest = { version = "0.12.4", features = [ "blocking" ] }
